# koki2

./: .gitignore  AGENTS.md  PLAN.md  PLAN_stage1_l10_grid.md  README.md  WORK.md  WORK_stage1_l10_grid.md  package-lock.json  pyproject.toml
colab/: README.md  koki2_colab.ipynb  stage1_l02_bad_sources.ipynb  stage1_l10_deplete_bad_sources.ipynb  stage1_l10_effectsize_grid.ipynb  stage2_l11_hazard_persistence_eta0_controls.ipynb  stage2_l11_modulator_grid.ipynb  stage2_l11_plastic_vs_noplast.ipynb
docs/: sensory_gating_notes.md
tests/: test_agent_plasticity.py  test_baseline_determinism.py  test_colab_notebooks_clean.py  test_env_bad_sources.py  test_env_depletion.py  test_env_grad_dropout.py  test_env_multisource.py  test_eval_run_cli.py  test_jax_discipline.py  test_mvt_filter.py  test_nursing_sensory_gating.py  test_sim_fastpaths.py  test_stage0_determinism.py
thesis/: 00_README.md  01_EXECUTIVE_SUMMARY_AND_CONTRIBUTIONS.md  02_THESIS_OUTLINE_MASTER.md  03_THEORY_FOUNDATIONS_INSIDE_OUT_FIRST_PRINCIPLES.md  04B_THEORY_META_LEARNING_AND_MEMORY_EMERGENCE.md  04_THEORY_MINIMAL_SUBSTRATE_AND_PLASTICITY.md  05_THEORY_GENOMIC_BOTTLENECK_AND_DEVELOPMENT.md  06_THEORY_ENVIRONMENTS_HOMEOSTASIS_AND_DRIVES.md  07_THEORY_BIASING_EVALUATORS_AND_OPEN_ENDEDNESS.md  08_ADDENDUM_DEVELOPMENTAL_NICHE_NURSING.md  09_ADDENDUM_VIABILITY_PRUNING_AND_MULTI_FIDELITY.md  10_FRAMEWORK_BIO_STRAINS_AND_ABLATIONS.md  11_IMPLEMENTATION_ARCHITECTURE_LAYERS_AND_INTERFACES.md  12_IMPLEMENTATION_ENVIRONMENT_LADDER_SPEC.md  13_IMPLEMENTATION_AGENT_CORE_SPEC.md  17_IMPLEMENTATION_JAX_SCALING_GUIDE.md  (+7 more)
(+30 files in other folders)
